--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,9 +1,11 @@
-// Define variable defaults
-// See reference: https://bootstrap-vue.org/docs/reference/color-variants
-$primary: #f20065;
-$body-bg: #f7f7f7;
-$body-color: #000;
+// Override Bootstrap functions
+@import "override/functions";
 
-// Then import Bootstrap an BootstrapVue SCSS files (order is important)
-@import "node_modules/bootstrap/scss/bootstrap.scss";
-@import "node_modules/bootstrap-vue/src/index.scss";
+// Define variables
+@import "variables";
+
+// Import Bootstrap modules and Bootstrap-Vue *after* defining variables
+@import "override/modules";
+@import "node_modules/bootstrap-vue/src/index";
+
+// Import other app styles here
