🐛 fix override of `mix` bootstrap sass function

--- a/src/style/override/_functions.scss
+++ b/src/style/override/_functions.scss
@@ -38,12 +38,14 @@
     0: h,
     1: s,
     2: l,
-    3: a
+    3: a,
   );
   // find end of part
-  $end: str-index($color, ',');
-  @while ($end and not str-is-between(str-slice($color, 0, $end - 1), '(', ')')) {
-    $newEnd: str-index(str-slice($color, $end + 1), ',');
+  $end: str-index($color, ",");
+  @while (
+    $end and not str-is-between(str-slice($color, 0, $end - 1), "(", ")")
+  ) {
+    $newEnd: str-index(str-slice($color, $end + 1), ",");
     @if (not $newEnd) {
       $newEnd: 0;
     }
@@ -53,7 +55,7 @@
     $part: str-slice($color, 0, $end - 1);
     $value: map-merge(
       (
-        map-get($indices, $index): $part
+        map-get($indices, $index): $part,
       ),
       recursive-color(str-slice($color, $end + 1), $index + 1)
     );
@@ -80,9 +82,9 @@
     @return (h: $h, s: $s, l: $l, a: $a);
   }
 
-  @if (str-slice($c, 0, 3) == 'var') {
+  @if (str-slice($c, 0, 3) == "var") {
     // var(--color)
-    $commaPos: str-index($c, ',');
+    $commaPos: str-index($c, ",");
     $end: -2;
     @if ($commaPos) {
       $end: $commaPos - 1;
@@ -97,13 +99,13 @@
     @return (h: $h, s: $s, l: $l, a: $a);
   }
 
-  @if ($c == '0') {
+  @if ($c == "0") {
     @return (h: $h, s: $s, l: $l, a: $a);
   }
 
   // color is (maybe complex) calculated color
   // e.g.: hsla(calc((var(--white-h) + var(--primary-h)) / 2), calc((var(--white-s) + var(--primary-s)) / 2), calc((var(--white-l) + var(--primary-l)) / 2), calc((var(--white-a, 1) + var(--primary-a, 1)) / 2)), hsla(calc((var(--white-h) + var(--primary-h)) / 2), calc((var(--white-s) + var(--primary-s)) / 2), calc((var(--white-l) + var(--primary-l)) / 2), calc((var(--white-a, 1) + var(--primary-a, 1)) / 2))
-  $startPos: str-index($c, '(');
+  $startPos: str-index($c, "(");
   $c: str-slice($c, $startPos + 1, -2); // 3 or 4 comma-separated vomplex values
   @return recursive-color($c);
   // $hEnd: str-index($c, ',');
@@ -175,10 +177,22 @@
   $l2: map-get($c2, l);
   $a2: map-get($c2, a);
 
-  $h: calc((#{$h1} + #{$h2}) / 2);
-  $s: calc((#{$s1} + #{$s2}) / 2);
+  $h: if(
+    #{$h1} == "0deg" or #{$h1} == "0",
+    #{$h2},
+    calc((#{$h1} + #{$h2}) / 2)
+  );
+  $s: if(
+    #{$s1} == "0%" or #{$s1} == "0",
+    calc(#{$s2} / 2),
+    calc((#{$s1} + #{$s2}) / 2)
+  );
   $l: calc((#{$l1} + #{$l2}) / 2);
-  $a: calc((#{$a1} + #{$a2}) / 2);
+  $a: if(
+    #{$a1} == "100%" or #{$a1} == "1",
+    #{$a2},
+    calc((#{$a1} + #{$a2}) / 2)
+  );
 
   @return render-hsla($h, $s, $l, $a);
 }
